# mandelbrot-fractal-drawer

./: .gitattributes  Bounds2D.h  Buffer_Base.h  CMakeLists.txt  Cleanup.h  Draw_Buffer.cpp  Draw_Buffer.h  Get_GL.h  Image_Buffer.cpp  Image_Buffer.h  Image_Stream.cpp  Image_Stream.h  Pixel_Calculator.cpp  Pixel_Calculator.h  Pixel_Stream_Base.h  README.md  RGB.h  Screen_Buffer.cpp  Screen_Buffer.h  Screen_Stream.cpp  Screen_Stream.h  Window.h  accelerated_calculation.cl  fragment_shader.glsl  main.cpp  vertex_shader.glsl
CMake/: FindGLEW.cmake  FindGLFW.cmake  FindOpenCL.cmake
OpenCL/: cl.hpp
